--- a/manifest.json
+++ b/manifest.json
@@ -1,4 +1,5 @@
 {
+  "id": "countryinns-pwa",
   "name": "Country Inns New Forest",
   "short_name": "Country Inns",
   "start_url": "/index.html",
@@ -6,9 +7,9 @@
   "background_color": "#ffffff",
   "theme_color": "#000000",
   "description": "Stay updated with events, offers, and news from our 7 pubs in the New Forest.",
-  "categories": [
-    "food"
-  ],
+  "categories": ["food"],
+  "orientation": "portrait",
+  "launch_handler": {},
   "icons": [
     {
       "src": "icon-192x192.png",
@@ -18,6 +19,18 @@
     {
       "src": "icon-512x512.png",
       "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "screenshot1.png",
+      "sizes": "1080x1920",
+      "type": "image/png"
+    },
+    {
+      "src": "screenshot2.png",
+      "sizes": "1080x1920",
       "type": "image/png"
     }
   ]
