--- a/manifest.json
+++ b/manifest.json
@@ -1,8 +1,9 @@
+"start_url": "https://countryinns.github.io/countryinns-pwa/"
 {
   "id": "countryinns-pwa",
   "name": "Country Inns New Forest",
   "short_name": "Country Inns",
-  "start_url": "/index.html",
+  "start_url":"https://countryinns.github.io/countryinns-pwa/"{,
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
