--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,7 @@
   "id": "countryinns-pwa",
   "name": "Country Inns New Forest",
   "short_name": "Country Inns",
-  "start_url":"/countryinns-pwa/",
+  "start_url": "https://sites.google.com/view/countryinns?nocache=true",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
