--- a/manifest.json
+++ b/manifest.json
@@ -2,8 +2,8 @@
   "id": "countryinns-pwa",
   "name": "Country Inns New Forest",
   "short_name": "Country Inns",
-  "start_url": "https://sites.google.com/view/countryinns/",
-  "scope": "https://sites.google.com/view/countryinns/",
+  "start_url": "https://countryinns.github.io/countryinns-pwa/",
+"scope": "https://countryinns.github.io/countryinns-pwa/",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#000000",
