--- a/manifest.json
+++ b/manifest.json
@@ -11,25 +11,24 @@
   "categories": ["food"],
   "orientation": "portrait",
   "icons": [
-    {
-      "src": "https://YOUR_GITHUB_REPO_URL/icon-192x192.png",
+    "src": "icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://YOUR_GITHUB_REPO_URL/icon-512x512.png",
+      "src": "icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "screenshots": [
     {
-      "src": "https://YOUR_GITHUB_REPO_URL/screenshot1.png",
+      "src": "screenshot1.png",
       "sizes": "1080x1920",
       "type": "image/png"
     },
     {
-      "src": "https://YOUR_GITHUB_REPO_URL/screenshot2.png",
+      "src": "screenshot2.png",
       "sizes": "1080x1920",
       "type": "image/png"
     }
