--- a/manifest.json
+++ b/manifest.json
@@ -11,24 +11,24 @@
   "categories": ["food"],
   "orientation": "portrait",
   "icons": [
-    "src": "icon-192x192.png",
+    "src": "https://github.com/countryinns/countryinns-pwa/blob/main/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512x512.png",
+      "src": "https://github.com/countryinns/countryinns-pwa/blob/main/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
   ],
   "screenshots": [
     {
-      "src": "screenshot1.png",
+      "src": "https://github.com/countryinns/countryinns-pwa/blob/main/screenshot1.png",
       "sizes": "1080x1920",
       "type": "image/png"
     },
     {
-      "src": "screenshot2.png",
+      "src": "https://github.com/countryinns/countryinns-pwa/blob/main/screenshot2.png",
       "sizes": "1080x1920",
       "type": "image/png"
     }
