--- a/manifest.json
+++ b/manifest.json
@@ -1,88 +1,42 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Country Inns App</title>
-
-    <!-- PWA Manifest -->
-    <link rel="manifest" href="manifest.json">
-
-    <!-- Favicon -->
-    <link rel="icon" href="favicon.ico" type="image/x-icon">
-
-    <!-- Theme -->
-    <meta name="theme-color" content="#000000">
-
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            text-align: center;
-            padding: 20px;
-            background-color: white;
-            color: black;
-            transition: opacity 0.5s ease;
-        }
-        .dark-mode {
-            background-color: black;
-            color: white;
-        }
-        .loading-screen {
-            position: fixed;
-            top: 0; left: 0;
-            width: 100%; height: 100%;
-            background: white;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            z-index: 9999;
-            transition: opacity 0.5s ease;
-        }
-        .loading-screen.fade-out {
-            opacity: 0;
-            pointer-events: none;
-        }
-        .spinner {
-            width: 50px;
-            height: 50px;
-            border: 5px solid rgba(0,0,0,0.1);
-            border-top: 5px solid #007bff;
-            border-radius: 50%;
-            animation: spin 1s linear infinite;
-        }
-        @keyframes spin {
-            0% { transform: rotate(0deg); }
-            100% { transform: rotate(360deg); }
-        }
-    </style>
-</head>
-<body>
-    <div class="loading-screen" id="loading-screen">
-        <div class="spinner"></div>
-    </div>
-    
-    <h1>Welcome to Country Inns</h1>
-    <button id="dark-mode-toggle">🌙 Toggle Dark Mode</button>
-    <button id="open-site">🌐 Open Google Sites</button>
-    <button id="install-button" style="display:none;">📲 Install App</button>
-
-    <script>
-        // Loading Screen Fade Out
-        window.addEventListener("load", function() {
-            document.getElementById("loading-screen").classList.add("fade-out");
-        });
-
-        // Dark Mode Toggle with Icon Change
-        const darkModeToggle = document.getElementById("dark-mode-toggle");
-        if (localStorage.getItem("dark-mode") === "enabled") {
-            document.body.classList.add("dark-mode");
-            darkModeToggle.textContent = "☀️ Light Mode";
-        }
-        darkModeToggle.addEventListener("click", function() {
-            document.body.classList.toggle("dark-mode");
-            darkModeToggle.textContent = document.body.classList.contains("dark-mode") ? "☀️ Light Mode" : "🌙 Dark Mode";
-            localStorage.setItem("dark-mode", document.body.classList.contains("dark-mode") ? "enabled" : "disabled");
-        });
-    </script>
-</body>
-</html>
+{
+  "id": "countryinns-pwa",
+  "name": "Country Inns New Forest",
+  "short_name": "Country Inns",
+  "start_url": "/countryinns-pwa/",
+  "scope": "/countryinns-pwa/",
+  "display": "standalone",
+  "background_color": "#ffffff",
+  "theme_color": "#000000",
+  "description": "Stay updated with events, offers, and news from our 7 pubs in the New Forest.",
+  "categories": ["food"],
+  "orientation": "portrait",
+  "icons": [
+    {
+      "src": "icon-192x192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ],
+  "screenshots": [
+    {
+      "src": "Screenshot1.png",
+      "sizes": "1080x1920",
+      "type": "image/png"
+    },
+    {
+      "src": "Screenshot2.png",
+      "sizes": "1080x1920",
+      "type": "image/png"
+    },
+    {
+      "src": "Screenshot3.png",
+      "sizes": "1080x1920",
+      "type": "image/png"
+    }
+  ]
+}
