--- a/manifest.json
+++ b/manifest.json
@@ -5,7 +5,7 @@
   "start_url": "/countryinns-pwa/",
   "scope": "/countryinns-pwa/",
   "display": "standalone",
-  "background_color": "#ffffff",
+  "background_color": "#000000",
   "theme_color": "#000000",
   "description": "Stay updated with events, offers, and news from our 7 pubs in the New Forest.",
   "categories": ["food"],
@@ -19,7 +19,8 @@
     {
       "src": "icon-512x512.png",
       "sizes": "512x512",
-      "type": "image/png"
+      "type": "image/png",
+      "purpose": "any maskable"
     }
   ],
   "screenshots": [
