--- a/manifest.json
+++ b/manifest.json
@@ -12,12 +12,12 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "icon-192x192.png",
+      "src": "/countryinns-pwa/assets/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "icon-512x512.png",
+      "src": "/countryinns-pwa/assets/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
@@ -25,17 +25,17 @@
   ],
   "screenshots": [
     {
-      "src": "Screenshot1.png",
+      "src": "/countryinns-pwa/assets/Screenshot1.png",
       "sizes": "1080x1920",
       "type": "image/png"
     },
     {
-      "src": "Screenshot2.png",
+      "src": "/countryinns-pwa/assets/Screenshot2.png",
       "sizes": "1080x1920",
       "type": "image/png"
     },
     {
-      "src": "Screenshot3.png",
+      "src": "/countryinns-pwa/assets/Screenshot3.png",
       "sizes": "1080x1920",
       "type": "image/png"
     }
