--- a/manifest.json
+++ b/manifest.json
@@ -1,43 +1,36 @@
 {
-  "id": "countryinns-pwa",
-  "name": "Country Inns New Forest",
+  "name": "Country Inns",
   "short_name": "Country Inns",
-  "start_url": "/countryinns-pwa/",
-  "scope": "/countryinns-pwa/",
+  "start_url": "/",
   "display": "standalone",
-  "background_color": "#000000",
-  "theme_color": "#000000",
-  "description": "Stay updated with events, offers, and news from our 7 pubs in the New Forest.",
-  "categories": ["food"],
+  "background_color": "#ffffff",
+  "theme_color": "#008080",
+  "description": "Stay updated with events, menus, and promotions at our 7 Country Inns pubs.",
   "orientation": "portrait",
+  "categories": ["food", "drink", "travel", "hospitality"],
+  "scope": "/",
+  "app_id": "countryinns.pwa",
+  "screenshots": [
+    {
+      "src": "https://countryinns.github.io/countryinns-pwa/assets/screenshot1.png",
+      "sizes": "540x720",
+      "type": "image/png"
+    }
+  ],
   "icons": [
     {
-      "src": "assets/icon-192x192.png",
+      "src": "https://countryinns.github.io/countryinns-pwa/assets/icon-192x192.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "assets/icon-512x512.png",
+      "src": "https://countryinns.github.io/countryinns-pwa/assets/icon-512x512.png",
       "sizes": "512x512",
       "type": "image/png",
       "purpose": "any maskable"
     }
   ],
-  "screenshots": [
-    {
-      "src": "assets/Screenshot1.png",
-      "sizes": "1080x1920",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/Screenshot2.png",
-      "sizes": "1080x1920",
-      "type": "image/png"
-    },
-    {
-      "src": "assets/Screenshot3.png",
-      "sizes": "1080x1920",
-      "type": "image/png"
-    }
-  ]
+  "launch_handler": {
+    "client_mode": "navigate-existing"
+  }
 }
